# minirepo

./: README.md
log-parser-reporter/: .gitignore  Makefile  README.md  gen_samples.py  pyproject.toml
log-parser-reporter/samples/: app.jsonl
log-parser-reporter/src/log_reporter/: analyzer.py  cli.py  models.py  reporter.py
log-parser-reporter/src/log_reporter/parsers/: base.py  json_parser.py  text_parser.py
log-parser-reporter/templates/: report.html.j2
log-parser-reporter/tests/: test_core.py
mini-pytest-api-tests/: .env.example  .gitignore  Makefile  README.md  py.txt  pyproject.toml  pytest_output.txt  ruff_output.txt
mini-pytest-api-tests/.github/workflows/: ci.yml
mini-pytest-api-tests/config/: dev.yml  staging.yml
mini-pytest-api-tests/src/apitest/: client.py  config.py  schemas.py
mini-pytest-api-tests/tests/: conftest.py  test_other.py  test_users.py
