[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log-parser-reporter"
version = "0.1.0"
description = "High-performance log parsing and reporting tool"
authors = [
  { name = "Backend Engineer", email = "eng@example.com" },
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.3",
]

[project.scripts]
log-reporter = "log_reporter.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.15",
    "black>=24.1.1",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
